@@ -13,10 +13,10 @@
 
 ### The configure script will replace these variables.
 
-srcdir=@srcdir@
-CC="@CC@"
+: ${srcdir=@srcdir@}
+: ${CC=@CC@}
 
-$CC -DGRUB_SYMBOL_GENERATOR=1 -E -I. -Iinclude -I$srcdir/include $* \
+$CC -DGRUB_SYMBOL_GENERATOR=1 -E -I. -Iinclude -I"$srcdir/include" $* \
   | grep -v '^#' \
   | sed -n \
         -e '/EXPORT_FUNC *([a-zA-Z0-9_]*)/{s/.*EXPORT_FUNC *(\([a-zA-Z0-9_]*\)).*/\1 kernel/;p;}' \
