@@ -13,8 +13,8 @@
 
 ### The configure script will replace these variables.
 
-srcdir=@srcdir@
-CC=@CC@
+: ${srcdir=@srcdir@}
+: ${CC=@CC@}
 
 
 cat <<EOF
@@ -45,6 +45,8 @@ done
 
 cat <<EOF
 
+#define COMPILE_TIME_ASSERT(cond) switch (0) { case 1: case !(cond): ; }
+
 void
 grub_register_exported_symbols (void)
 {
@@ -57,7 +59,7 @@ cat <<EOF
     {
 EOF
 
-$CC -DGRUB_SYMBOL_GENERATOR=1 -E -I. -Iinclude -I$srcdir/include $* \
+$CC -DGRUB_SYMBOL_GENERATOR=1 -E -I. -Iinclude -I"$srcdir/include" $* \
   | grep -v '^#' \
   | sed -n \
         -e '/EXPORT_FUNC *([a-zA-Z0-9_]*)/{s/.*EXPORT_FUNC *(\([a-zA-Z0-9_]*\)).*/      {"\1", \1},/;p;}' \
@@ -68,6 +70,7 @@ cat <<EOF
       {0, 0}
     };
 
+  COMPILE_TIME_ASSERT (sizeof (tab) > sizeof (tab[0]));
   for (p = tab; p->name; p++)
     grub_dl_register_symbol (p->name, p->addr, 0);
 }
